--- a/static/app/app.component.html
+++ b/static/app/app.component.html
@@ -1,59 +1,66 @@
-<div class="row">
-    <div class="col-sm-12">
-        <h1>
-            Voice Analyzer {{username}}
-        </h1>
-    </div>
-</div>
-<div class="row well">
-    <div class="col-sm-8">
-        Want to learn more about how you come across to the world? Want to learn more about your 
-        friends and followers Twitter presence? Enter a Twitter handle and see when that account is most active, 
-        what sentiments the account tends to present, what words are most commonly used, and other data points.
-    </div>
-    <div class="col-sm-4">
-        <input class="form-control" [(ngModel)]="username" placeholder="Twitter VV user" name="uname">
-        <button (click)="getTwitterData()">Analyze</button>
-        <div style="color:red;">
-            {{errorMessage}}
-        </div>
-    </div>
-</div>
-<div *ngIf="!showAnalysis">
-    {{statusMessage}}
-</div>
-<div *ngIf="showAnalysis">
+<div>
     <div class="row">
         <div class="col-sm-12">
-            <h4>Most Used Words</h4>
-            <canvas id='my_canvas' height="400" width="600" ></canvas>
+            <h1>
+                Voice Analyzer {{username}}
+            </h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <h4 class="graph-title">Day of the week</h4>
-            What days of the week do you tend to tweet most?
-            <!--{{ make_percentage_line_graph('DOW', dow_data, 350, 400, 'dayOfWeek','percentage', 'Day of Week', 'Percent of Tweets') }}-->
+    <div class="row well">
+        <div class="col-sm-8">
+            Want to learn more about how you come across to the world? Want to learn more about your 
+            friends and followers Twitter presence? Enter a Twitter handle and see when that account is most active, 
+            what sentiments the account tends to present, what words are most commonly used, and other data points.
         </div>
-        <div class="col-sm-6">
-            <h4 class="graph-title">Hour of the day</h4>
-            When do you tweet during the day?
-            <!--{{ make_percentage_line_graph('HOD', hod_data, 350, 400, 'hourOfDay','percentage', 'Hour of Day', 'Percent of Tweets') }}-->
+        <div class="col-sm-4">
+            <form>
+                <input class="form-control" [(ngModel)]="username" placeholder="Twitter user" name="uname">
+                <button class="btn btn-primary" (click)="getTwitterData()">Analyze</button>
+                <div style="color:red;">
+                    {{errorMessage}}
+                </div>
+            </form>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <h4>Sentiment Analysis</h4>
-            Based on the NRC Lexicon, what is the overall sentiment of the words in your tweets?
-            <div id="sentimentGraphEmot">
-
+    <div [hidden]="showAnalysis">
+        {{statusMessage}}
+    </div>
+    <div [hidden]="!showAnalysis">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="graph-title">Most Used Words</h2>
+                <a href="https://timdream.org/wordcloud2.js/">Word cloud library</a> 
+                <canvas id='my_canvas' height="400" width="600" ></canvas>
             </div>
         </div>
-        <div class="col-md-6">
-            <h4>Sentiment Analysis</h4>
-            Based on the NRC Lexicon, what is the overall sentiment of the words in your tweets?
-            <div id="sentimentGraphHoriz">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2 class="graph-title">Day of the week</h2>
+                What days of the week do you tend to tweet most?
+                <div id="DOW">
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <h2 class="graph-title">Hour of the day</h2>
+                When do you tweet during the day?
+                <div id="HOD">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="graph-title">Sentiment Analysis</h2>
+                Based on the <a href="http://saifmohammad.com/WebPages/NRC-Emotion-Lexicon.htm">NRC Sentiment Lexicon</a>, what is the overall sentiment of the words in your tweets?
+                <div id="sentimentGraphEmot">
 
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h2 class="graph-title">Emotion Analysis</h2>
+                Based on the <a href="http://saifmohammad.com/WebPages/NRC-Emotion-Lexicon.htm">NRC Emotion Lexicon</a>, what is the overall sentiment of the words in your tweets?
+                <div id="sentimentGraphHoriz">
+
+                </div>
             </div>
         </div>
     </div>
